⬆️ use latest voorbeeld-design-tokens package and fix footer link contrast

--- a/packages/next-templates/src/components/ExampleFooter/footer.css
+++ b/packages/next-templates/src/components/ExampleFooter/footer.css
@@ -1,18 +1,3 @@
-.utrecht-page-content {
-  margin-block: 18px;
-  margin-inline: 18px;
-}
-
-.utrecht-page-footer {
-  --utrecht-page-footer-padding-block-end: 50px;
-  --utrecht-page-footer-padding-block-start: 50px;
-  --utrecht-page-footer-padding-inline-end: 48px;
-  --utrecht-page-footer-padding-inline-start: 80px;
-  --utrecht-heading-5-color: white;
-  --utrecht-link-color: white;
-  --utrecht-link-visited-color: white;
-}
-
 .example-link-list-container {
   display: flex;
   flex-direction: row;
@@ -61,15 +46,5 @@
 }
 
 .voorbeeld-footer-block {
-  --utrecht-link-text-decoration-color: var(--voorbeeld-color-white);
-  --utrecht-paragraph-color: var(--voorbeeld-color-white);
   max-width: 50ch;
-}
-
-.voorbeeld-footer-heading {
-  --utrecht-heading-2-color: var(--voorbeeld-color-white);
-  --utrecht-heading-2-font-family: var(--voorbeeld-typography-font-family-secondary);
-  --utrecht-heading-2-font-size: var(--voorbeeld-typography-font-size-md);
-  --utrecht-heading-2-font-weight: var(--voorbeeld-typography-font-weight-bold);
-  --utrecht-heading-2-line-height: var(--voorbeeld-typography-line-height-lg);
 }
